nac3parser/src/snapshots/nac3parser__parser__tests__parse_dict_comprehension.snap
---
source: nac3parser/src/parser.rs
assertion_line: 150
expression: parse_ast

---
Located {
    location: Location {
        row: 1,
        column: 1,
        file: FileName(
            "unknown",
        ),
    },
    custom: (),
    node: DictComp {
        key: Located {
            location: Location {
                row: 1,
                column: 2,
                file: FileName(
                    "unknown",
                ),
            },
            custom: (),
            node: Name {
                id: "x1",
                ctx: Load,
            },
        },
        value: Located {
            location: Location {
                row: 1,
                column: 6,
                file: FileName(
                    "unknown",
                ),
            },
            custom: (),
            node: Name {
                id: "x2",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                        file: FileName(
                            "unknown",
                        ),
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 18,
                        file: FileName(
                            "unknown",
                        ),
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: false,
            },
        ],
    },
}
